# brainfuck-extended

./: .gitignore  Cargo.toml  README.md  flake.nix
codegen/: Cargo.toml
codegen/src/: Cargo.toml.TEMPLATE  README.md.TEMPLATE  ast.rs  gen_crate.rs  generator.rs  main.rs
interpreter/: Cargo.toml
interpreter/src/: main.rs
sources.b/: hello.b  txt2brainfuck.b
