[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = "0.6.2"
dotenvy = "0.15.7"
proc-macro2 = { version = "1.0.69", features = ["nightly"] }
quote = "1.0.33"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
syn = { version = "2.0.38", features = ["full"] }
thiserror = "1.0.49"
tracing = "0.1.39"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
typed-builder = "0.16.2"
ascii = "1"
